# tg_agg

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: migration-guardian.md
.claude/skills/check/: SKILL.md
.claude/skills/publish/: SKILL.md
.claude/skills/sync-readme/: SKILL.md
.github/workflows/: ci.yml
app/: config.py  db.py  logging_setup.py  main.py  models.py  pipeline.py  storage.py  tone.py
app/bot/: fsm_storage.py  handlers.py
app/scheduler/: worker.py
app/services/: deepseek.py  rss.py
deploy/: auto-update.sh
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_db.py  test_deepseek.py  test_fsm_storage.py  test_handlers.py  test_pipeline.py  test_rss.py  test_storage.py  test_tone.py
