[project]
name = "tg-agg"
version = "0.1.0"
description = "Telegram channel bot that aggregates an RSS feed and posts AI-selected news via DeepSeek"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "openai>=1.30",
    "pydantic-settings>=2.1",
]

[dependency-groups]
# Dev-only: in-memory SQLite for offline smoke tests.
dev = [
    "aiosqlite>=0.19",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
