[project]
name = "tg-agg"
version = "0.1.0"
description = "Telegram channel bot that aggregates an RSS feed and posts AI-selected news via DeepSeek"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiogram>=3.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "openai>=1.30",
    "pydantic-settings>=2.1",
    "alembic>=1.18.5",
    "loguru>=0.7.3",
]

[dependency-groups]
# Dev-only: in-memory SQLite for offline smoke tests.
dev = [
    "aiosqlite>=0.19",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# Coverage runs on every `pytest`: report uncovered lines and fail under threshold.
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["app"]
# Process wiring / entrypoints — exercised at runtime, not by unit tests.
omit = ["app/main.py", "app/scheduler/worker.py", "app/logging_setup.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, flake8-bugbear, comprehensions.
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.13"
files = ["app"]
ignore_missing_imports = true
check_untyped_defs = true
